--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,15 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  get_it: ^7.7.0
+  flutter_secure_storage: ^9.2.2
+  flutter_bloc: ^8.1.5
+  go_router: ^14.1.4
+  json_annotation: ^4.9.0
+  bloc: ^8.1.4
+  flutter_svg: ^2.0.10+1 
+  dio: ^5.4.3+1
+  retrofit: ^4.1.0
   flutter:
     sdk: flutter
 
@@ -37,6 +46,9 @@ dependencies:
   cupertino_icons: ^1.0.6
 
 dev_dependencies:
+  retrofit_generator: ^8.1.0
+  json_serializable: ^6.8.0
+  build_runner: 
   flutter_test:
     sdk: flutter
 
@@ -59,9 +71,9 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/svg/eye.svg
+    - assets/svg/eye_off.svg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
