--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,8 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  shimmer: ^3.0.0
+  cached_network_image: ^3.3.1
   get_it: ^7.7.0
   flutter_secure_storage: ^9.2.2
   flutter_bloc: ^8.1.5
